--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,2 @@
-blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-MouseInfo==0.1.3
-numpy==1.26.2
-opencv-python==4.8.1.78
-Pillow==10.1.0
-PyAutoGUI==0.9.54
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-PyScreeze==0.1.30
-pytweening==1.0.7
-watchdog==3.0.0
-Werkzeug==3.0.1
+Flask==1.1.2
+gunicorn==20.0.4
